[package]
name = "editor-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
base-io-traits = { path = "../../lib/base-io-traits" }
base-io = { path = "../../lib/base-io" }
cache = { path = "../../lib/cache" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-backend = { path = "../../lib/graphics-backend" }
wasm-runtime = { path = "../../lib/wasm-runtime" }
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
wasm-logic-fs = { path = "../../lib/wasm-logic-fs" }
wasm-logic-http = { path = "../../lib/wasm-logic-http" }
wasm-logic-graphics = { path = "../../lib/wasm-logic-graphics" }
wasm-logic-sound = { path = "../../lib/wasm-logic-sound" }
sound = { path = "../../lib/sound" }
editor = { path = "../editor", default-features = false }

wasmer = { version = "6.1.0-rc.3", default-features = false, features = [
  "sys",
  "cranelift",
] }
anyhow = { version = "1.0.99", features = ["backtrace"] }
rayon = "1.11.0"
egui = { version = "0.32.2", default-features = false, features = ["serde"] }
libloading = "0.8.8"
