[package]
name = "editor-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
cache = { path = "../../lib/cache" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-backend = { path = "../../lib/graphics-backend" }
sound = { path = "../../lib/sound" }
wasm-logic-fs = { path = "../../lib/wasm-logic-fs" }
wasm-logic-graphics = { path = "../../lib/wasm-logic-graphics" }
wasm-logic-http = { path = "../../lib/wasm-logic-http" }
wasm-logic-sound = { path = "../../lib/wasm-logic-sound" }
wasm-runtime = { path = "../../lib/wasm-runtime" }

editor = { path = "../editor", default-features = false }

anyhow = { version = "1.0.99", features = ["backtrace"] }
egui = { version = "0.32.2", default-features = false, features = ["serde"] }
libloading = "0.8.8"
rayon = "1.11.0"
wasmer = { version = "6.1.0-rc.3", default-features = false, features = [
  "sys",
  "cranelift",
] }
