[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
math = { path = "../../lib/math" }
config = { path = "../../lib/config" }
network = { path = "../../lib/network" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
image-utils = { path = "../../lib/image-utils" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }

egui-timeline = { path = "../egui-timeline" }
map = { path = "../map" }
client-containers = { path = "../client-containers" }
client-ui = { path = "../client-ui" }
client-render-base = { path = "../client-render-base" }
client-notifications = { path = "../client-notifications" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }
game-base = { path = "../game-base" }
legacy-map = { path = "../legacy-map" }
editor-interface = { path = "../editor-interface" }
editor-auto-mapper-wasm = { path = "../editor-auto-mapper-wasm" }
camera = { path = "../camera" }

map-convert-lib = { path = "../map-convert-lib" }

egui = { version = "0.32.2", default-features = false, features = ["serde"] }
egui_extras = { version = "0.32.2" }
egui-file-dialog = { version = "0.11.0", default-features = false }
egui_commonmark = "0.21.1"

async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
tokio = { version = "1.47.1", features = [
  "rt-multi-thread",
  "sync",
  "fs",
  "time",
  "macros",
] }
anyhow = { version = "1.0.99", features = ["backtrace"] }
rayon = "1.11.0"
rand = { version = "0.9.2", features = ["thread_rng"] }
time = { version = "0.3.43", features = ["serde"] }
serde_json = "1.0.143"
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
x509-cert = { version = "0.2.5" }
log = "0.4.28"
enum_dispatch = "0.3.13"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = [
  "serde",
  "serde_impl",
] }
fixed = "1.29.0"
scan_fmt = "0.2.6"
rustc-hash = "2.1.1"
tempfile = { version = "3.21.0" }

[dev-dependencies]
base-fs = { path = "../../lib/base-fs" }
