[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
image-utils = { path = "../../lib/image-utils" }
math = { path = "../../lib/math" }
network = { path = "../../lib/network" }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }

camera = { path = "../camera" }
client-containers = { path = "../client-containers" }
client-notifications = { path = "../client-notifications" }
client-render-base = { path = "../client-render-base" }
client-ui = { path = "../client-ui" }
editor-auto-mapper-wasm = { path = "../editor-auto-mapper-wasm" }
editor-interface = { path = "../editor-interface" }
egui-timeline = { path = "../egui-timeline" }
game-base = { path = "../game-base" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }
legacy-map = { path = "../legacy-map" }
map = { path = "../map" }

map-convert-lib = { path = "../map-convert-lib" }

egui = { version = "0.32.3", default-features = false, features = ["serde"] }
egui-file-dialog = { version = "0.11.0", default-features = false }
egui_commonmark = "0.21.1"
egui_extras = { version = "0.32.3" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
enum_dispatch = "0.3.13"
fixed = "1.29.0"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = [
  "serde",
  "serde_impl",
] }
log = "0.4.28"
rand = { version = "0.9.2", features = ["thread_rng"] }
rayon = "1.11.0"
regex = "1.12.2"
rustc-hash = "2.1.1"
scan_fmt = "0.2.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"
tempfile = { version = "3.23.0" }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "sync",
  "fs",
  "time",
  "macros",
] }
tracing = { version = "0.1.41", default-features = false, features = [
  "attributes",
] }
x509-cert = { version = "0.2.5" }

[dev-dependencies]
base-fs = { path = "../../lib/base-fs" }
