[package]
name = "game-base"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
command-parser = { path = "../../lib/command-parser" }
config = { path = "../../lib/config" }
hiarc = { path = "../../lib/hiarc", features = ["enable_time"] }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool" }

game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }

anyhow = { version = "1.0.99", features = ["backtrace"] }
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = [
  "serde",
  "serde_impl",
] }
indexmap = "2.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
thiserror = "2.0.16"
time = { version = "0.3.43", features = ["serde"] }

[dev-dependencies]
rustc-hash = "2.1.1"
