[package]
name = "game-base"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
command-parser = { path = "../../lib/command-parser" }
config = { path = "../../lib/config" }
hiarc = { path = "../../lib/hiarc", features = ["enable_time"] }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool" }

game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = [
  "serde",
  "serde_impl",
] }
indexmap = "2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }

[dev-dependencies]
rustc-hash = "2.1.1"
