[package]
name = "game-config"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../../lib/config" }

game-interface = { path = "../game-interface" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
