[package]
name = "game-network"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
network = { path = "../../lib/network" }
pool = { path = "../../lib/pool" }

game-base = { path = "../game-base" }
game-interface = { path = "../game-interface" }

async-trait = "0.1.89"
bincode = { features = ["serde"], version = "2.0.1" }
log = "0.4.28"
serde = "1.0.228"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "macros",
] }
